--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.javarush</groupId>
+    <groupId>Speed-test</groupId>
     <artifactId>final</artifactId>
     <version>1.0-SNAPSHOT</version>
 
@@ -52,5 +52,4 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
-
 </project>
